--- a/app/templates/adminPart/adminUpload.html
+++ b/app/templates/adminPart/adminUpload.html
@@ -4,7 +4,12 @@
 {% block content %}
 
     <div class="menu-section">
-
+        <h2>Dashboard</h2>
+        <li class="submenu">
+            <strong>  Functionality:</strong>
+            <ul>
+                <li>Hello World</li>
+            </ul>
+        </li>
     </div>
-    
 {% endblock %}
