--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -14,8 +14,8 @@
                     </div>
                     <div class="button-wrapper">
                         <button type="submit">Upload</button>
+                        <div id="lecturerUploadResult"></div>
                     </div>
-                    <div id="lecturerUploadResult" style="margin-top: 20px;"></div>
                 </form>
             </div>
         </div>
