--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -13,8 +13,8 @@
                     </div>
                     <div class="button-wrapper">
                         <button type="submit">Upload</button>
+                        <div id="examUploadResult"></div>
                     </div>
-                    <div id="examUploadResult" style="margin-top: 20px;"></div>
                 </form>
             </div>
         </div>
