--- a/app/static/css/admin/adminHome.css
+++ b/app/static/css/admin/adminHome.css
@@ -138,7 +138,7 @@ form {
     width: 60%;
     border-radius: 10px;
     background-color: #fff;
-    border: 1px solid #ccc;
+    /*border: 1px solid #ccc;*/
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
