--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -3,6 +3,18 @@
 
 {% block content %}
 
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class="flashes">
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
+
+
     <div class="menu-section">
         <div class="main-frame">
             <h2>Upload Exam File</h2>
@@ -19,6 +31,8 @@
                 </form>
             </div>
         </div>
+
+
 
 
         <h2>Table Record</h2>
