--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -16,6 +16,9 @@
             </form>
         </div>
 
+        <!-- Result feedback -->
+        <div id="examUploadResult" style="margin-top:20px;"></div>
+
         <!-- Flash messages -->
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -37,8 +40,8 @@
                     <th>Exam Day</th>
                     <th>Start Time</th>
                     <th>End Time</th>
-                    <th>Course Code</th>
-                    <th>Section</th>
+                    <th>Program Code</th>
+                    <th>Course Section</th>
                     <th>Lecturer</th>
                     <th>No. of Students</th>
                     <th>Room</th>
@@ -47,15 +50,15 @@
             <tbody>
                 {% for row in exam_data %}
                 <tr>
-                    <td>{{ row.exam_date }}</td>
-                    <td>{{ row.day }}</td>
-                    <td>{{ row.start_time }}</td>
-                    <td>{{ row.end_time }}</td>
-                    <td>{{ row.program }}</td>
-                    <td>{{ row.course_sec }}</td>
-                    <td>{{ row.lecturer }}</td>
-                    <td>{{ row.num_of_students }}</td>
-                    <td>{{ row.room }}</td>
+                    <td>{{ row.examDate }}</td>
+                    <td>{{ row.examDay }}</td>
+                    <td>{{ row.examStartTime }}</td>
+                    <td>{{ row.examEndTime }}</td>
+                    <td>{{ row.examProgramCode }}</td>
+                    <td>{{ row.examCourseSectionCode }}</td>
+                    <td>{{ row.examLecturer }}</td>
+                    <td>{{ row.examTotalStudent }}</td>
+                    <td>{{ row.examVenue }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
