--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -20,6 +20,18 @@
     </div>
 
     <h2>Table Record</h2>
+    <label>
+        Alert
+        1. ID as the PK
+        2. All able to edit
+        3. With a dropdown by category frame
+        4. Add 'add and edit button'
+        Question
+        1. Does ExamDay is manually insert or need to use ExamDate to determine the day
+        2. Can ExamDay and ExamDate combine by {{ row.examDate }} {{ row.examDay }}
+        3. Can StartTime and EndTime combine by {{ row.examStartTime }} - {{ row.examEndTime }}
+         
+    </label>
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
