--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -21,17 +21,18 @@
 
     <h2>Table Record</h2>
     <h4>
-        Alert
-        1. ID as the PK
-        2. All able to edit
-        3. With a dropdown by category frame
-        4. Add 'add and edit button'
-        Question
-        1. Does ExamDay is manually insert or need to use ExamDate to determine the day
-        2. Can ExamDay and ExamDate combine by {{ row.examDate }} {{ row.examDay }}
-        3. Can StartTime and EndTime combine by {{ row.examStartTime }} - {{ row.examEndTime }}
-         
+        Alert<br>
+        1. ID as the PK<br>
+        2. All able to edit<br>
+        3. With a dropdown by category frame<br>
+        4. Add 'add and edit button'<br><br>
+        
+        Question<br>
+        1. Does ExamDay is manually insert or need to use ExamDate to determine the day<br>
+        2. Can ExamDay and ExamDate combine by {{ row.examDate }} {{ row.examDay }}<br>
+        3. Can StartTime and EndTime combine by {{ row.examStartTime }} - {{ row.examEndTime }}<br>
     </h4>
+
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
