--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -20,7 +20,7 @@
     </div>
 
     <h2>Table Record</h2>
-    <h4>
+    <label>
         Alert<br>
         1. ID as the PK<br>
         2. All able to edit<br>
@@ -31,7 +31,7 @@
         1. Does ExamDay is manually insert or need to use ExamDate to determine the day<br>
         2. Can ExamDay and ExamDate combine by "row.examDate" "row.examDay"<br>
         3. Can StartTime and EndTime combine by "row.examStartTime" - "row.examEndTime"<br>
-    </h4>
+    </label>
 
 
     <div class="user-table-container">
