--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -15,12 +15,14 @@
 
 
     <div class="menu-section">
+
+
         <div class="main-frame">
             <h2>Upload Masterfile</h2>
             <div class="form-frame">
-                <form id="uploadLecturerForm" enctype="multipart/form-data">
+                <form id="uploadExamForm" action="{{ url_for('admin_uploadLecturerDetails') }}" method="POST" enctype="multipart/form-data">
                     <div class="input-frame">
-                        <input type="file" id="lecturer_list" name="lecturer_file" accept=".xlsx,.xls,.xlsm" required>
+                        <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                     </div>
                     <div class="button-wrapper">
                         <button type="submit">Upload</button>
@@ -30,6 +32,13 @@
                 </form>
             </div>
         </div>
+
+
+
+
+
+
+
 
         <h2>Table Record</h2>
     <label>
