--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -22,7 +22,7 @@
             <div class="form-frame">
                 <form id="uploadExamForm" action="{{ url_for('admin_uploadLecturerTimetable') }}" method="POST" enctype="multipart/form-data">
                     <div class="input-frame">
-                        <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
+                        <input type="file" id="lecturer_list" name="lecturer_file" accept=".xlsx,.xls,.xlsm" required>
                     </div>
                     <div class="button-wrapper">
                         <button type="submit">Upload</button>
