--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -57,7 +57,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for row in exam_data %}
+                {% for row in lecturer_data %}
                 <tr>
                     <td>{{ row.lecturerID  }}</td>
                     <td>{{ row.lecturerName }}</td>
