--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -38,7 +38,7 @@
         <table class="user-data-table">
             <thead>
                 <tr>
-                    <th>Exam ID</th>
+                    <th>No</th>
                     <th>Exam Date</th>
                     <th>Exam Day</th>
                     <th>Start Time</th>
@@ -53,7 +53,8 @@
             <tbody>
                 {% for row in exam_data %}
                 <tr>
-                    <td>{{ row.examID  }}</td>
+                    <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
+                    <!-- <td>{{ row.examID  }}</td> -->
                     <td>{{ row.examDate }}</td>
                     <td>{{ row.examDay }}</td>
                     <td>{{ row.examStartTime }}</td>
