--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -20,19 +20,19 @@
     </div>
 
     <h2>Table Record</h2>
-    <label>
-        Alert<br>
-        1. ID as the PK<br>
-        2. All able to edit<br>
-        3. With a dropdown by category frame<br>
-        4. Add 'add and edit button'<br><br>
-        
-        Question<br>
-        1. Does ExamDay is manually insert or need to use ExamDate to determine the day<br>
-        2. Can ExamDay and ExamDate combine by "row.examDate" "row.examDay"<br>
-        3. Can StartTime and EndTime combine by "row.examStartTime" - "row.examEndTime"<br>
-    </label>
-
+    <li class="submenu">
+        <ul>
+            <li>Alert</li>
+            <li>1. ID as the PK</li>
+            <li>2. All able to edit</li>
+            <li>3. With a dropdown by category frame</li>
+            <li>4. Add 'add and edit button'</li>
+            <li>Question</li>
+            <li>1. Does ExamDay is manually insert or need to use ExamDate to determine the day</li>
+            <li>2. Can ExamDay and ExamDate combine by "row.examDate" "row.examDay"</li>
+            <li>3. Can StartTime and EndTime combine by "row.examStartTime" - "row.examEndTime"</li>
+        </ul>
+    </li>
 
     <div class="user-table-container">
         <table class="user-data-table">
