--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -15,7 +15,7 @@
                 </div>
                 <!-- Result feedback -->
                 <div id="lecturerUploadResult" style="text-align: center;"></div>
-                <div id="lecturerUploadErrors" style="text-align: center;"></div>
+                <!-- <div id="lecturerUploadErrors" style="text-align: center;"></div> -->
             </form>
         </div>
     </div>
