--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -15,6 +15,7 @@
                 </div>
                 <!-- Result feedback -->
                 <div id="examUploadResult" style="text-align: center;"></div>
+                <div id="examUploadErrors" style="text-align: center;"></div>
             </form>
         </div>
     </div>
