--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -7,6 +7,7 @@
         <h2>Upload Exam File</h2>
         <div class="form-frame">
             <form id="uploadExamForm" action="{{ url_for('admin_uploadExamDetails') }}" method="POST" enctype="multipart/form-data">
+                <label>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</label>
                 <div class="input-frame">
                     <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
