--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -7,7 +7,7 @@
         <h2>Upload Exam File</h2>
         <div class="form-frame">
             <form id="uploadExamForm" action="{{ url_for('admin_uploadExamDetails') }}" method="POST" enctype="multipart/form-data">
-                <label>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</label>
+                <ul>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</ul>
                 <div class="input-frame">
                     <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
@@ -22,19 +22,17 @@
     </div>
 
     <h2>Table Record</h2>
-    <li class="submenu">
-        <ul>
-            <li>Alert</li>
-            <li>1. ID as the PK</li>
-            <li>2. All able to edit</li>
-            <li>3. With a dropdown by category frame</li>
-            <li>4. Add 'add and edit button'</li>
-            <li>Question</li>
-            <li>1. Does ExamDay is manually insert or need to use ExamDate to determine the day</li>
-            <li>2. Can ExamDay and ExamDate combine by "row.examDate" "row.examDay"</li>
-            <li>3. Can StartTime and EndTime combine by "row.examStartTime" - "row.examEndTime"</li>
-        </ul>
-    </li>
+    <ul>
+        <li>Alert</li>
+        <li>1. ID as the PK</li>
+        <li>2. All able to edit</li>
+        <li>3. With a dropdown by category frame</li>
+        <li>4. Add 'add and edit button'</li>
+        <li>Question</li>
+        <li>1. Does ExamDay is manually insert or need to use ExamDate to determine the day</li>
+        <li>2. Can ExamDay and ExamDate combine by "row.examDate" "row.examDay"</li>
+        <li>3. Can StartTime and EndTime combine by "row.examStartTime" - "row.examEndTime"</li>
+    </ul>
 
     <div class="user-table-container">
         <table class="user-data-table">
