--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -7,10 +7,14 @@
         <h2>Upload Exam File</h2>
         <div class="form-frame">
             <form id="uploadExamForm" action="{{ url_for('admin_uploadExamDetails') }}" method="POST" enctype="multipart/form-data">
-                <ul>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</ul>
                 <div class="input-frame">
                     <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
+                <ul>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</ul>
+                <h4>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</h4>
+                <label>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</label>
+                <h5>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</h5>
+
                 <div class="button-wrapper">
                     <button type="submit">Upload</button>
                 </div>
