--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -10,10 +10,7 @@
                 <div class="input-frame">
                     <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
-                <ul>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</ul>
-                <h4>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</h4>
                 <label>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</label>
-                <h5>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room</h5>
 
                 <div class="button-wrapper">
                     <button type="submit">Upload</button>
@@ -26,17 +23,17 @@
     </div>
 
     <h2>Table Record</h2>
-    <ul>
-        <li>Alert</li>
-        <li>1. ID as the PK</li>
-        <li>2. All able to edit</li>
-        <li>3. With a dropdown by category frame</li>
-        <li>4. Add 'add and edit button'</li>
-        <li>Question</li>
-        <li>1. Does ExamDay is manually insert or need to use ExamDate to determine the day</li>
-        <li>2. Can ExamDay and ExamDate combine by "row.examDate" "row.examDay"</li>
-        <li>3. Can StartTime and EndTime combine by "row.examStartTime" - "row.examEndTime"</li>
-    </ul>
+    <label>
+        Alert<br>
+        1. ID as the PK<br>
+        2. All able to edit<br>
+        3. With a dropdown by category frame<br>
+        4. Add 'add and edit button'<br>
+        Question<br>
+        1. Does ExamDay is manually insert or need to use ExamDate to determine the day<br>
+        2. Can ExamDay and ExamDate combine by "row.examDate" "row.examDay"<br>
+        3. Can StartTime and EndTime combine by "row.examStartTime" - "row.examEndTime"
+    </label>
 
     <div class="user-table-container">
         <table class="user-data-table">
