--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -10,11 +10,14 @@
                 <div class="input-frame">
                     <input type="file" id="exam_list" name="exam_file" accept=".xlsx,.xls,.xlsm" required>
                 </div>
-                <label style="text-align: center;">
-                    Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, lecturer, No of, Room<br>
-                </label>
+                
                 <div class="button-wrapper">
                     <button type="submit">Upload</button>
+                </div>
+                <div>
+                    <label>
+                        Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, Lecturer, No of, Room
+                    </label>
                 </div>
                 <!-- Result feedback -->
                 <div id="examUploadResult" style="text-align: center;"></div>
