--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -14,7 +14,7 @@
                 <div class="button-wrapper">
                     <button type="submit">Upload</button>
                 </div>
-                <div>
+                <div style="text-align: center;">
                     <label>
                         <br>Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, Lecturer, No of, Room
                     </label>
