--- a/app/templates/adminPart/adminUploadExamDetails.html
+++ b/app/templates/adminPart/adminUploadExamDetails.html
@@ -7,9 +7,9 @@
         <h2>Upload Exam File</h2>
         <div class="form-frame">
             <form id="uploadExamForm" action="{{ url_for('admin_uploadExamDetails') }}" method="POST" enctype="multipart/form-data">
-                <div style="text-align: center;">
+                <div style="text-align: center; margin-bottom: 2%;">
                     <label>
-                        Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, Lecturer, No of, Room<br>
+                        Upload file 1st row must be empty and format with Date, Day, Start Time, End Time, Program, Course/Section, Lecturer, No of, Room
                     </label>
                 </div>
                 <div class="input-frame">
