--- a/app/templates/lecturerPart/lecturerBase.html
+++ b/app/templates/lecturerPart/lecturerBase.html
@@ -8,9 +8,9 @@
         <div class="heading"></div>
         <div class="user-info">
             <div class="user-details">
-                {{user_name}} <br>
-                {{user_id}} <br>
-                {{user_department}}
+                {{lecturer_name}} <br>
+                {{lecturer_id}} <br>
+                {{lecturer_department}}
             </div>
             <a href="{{ url_for('lecturer_logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
         </div>
