--- a/app/templates/deanPart/deanRegister.html
+++ b/app/templates/deanPart/deanRegister.html
@@ -25,7 +25,7 @@
                 <label class="text-position">Email Address</label>
                 <input type="text" name="email" value="{{ email_text }}"><br>
 
-                <label class="text-position">Department</label>
+                <label class="text-position">Head of Department</label>
                 <select name="department" value="{{ department_text }}">
                     <option value="" disabled selected>Select Department</option>
                     <option value="CADP - CENTRE OF AUSTRALIAN DEGREE PROGRAM">(CADP) CENTRE OF AUSTRALIAN DEGREE PROGRAM</option>
