--- a/app/templates/lecturerPart/lecturerForgotPassword.html
+++ b/app/templates/lecturerPart/lecturerForgotPassword.html
@@ -19,7 +19,7 @@
             <!-- Frame for Email Address container to send Email -->
             <div class="input-container">
                 <label class="text-position">Email Address</label>
-                <input type="email" name="email" value="{{ forgot_email_text }}">
+                <input type="email" name="email" value="{{ lecturer_forgot_email_text }}">
             </div>
             <br>
 
