--- a/app/templates/deanPart/deanRegister.html
+++ b/app/templates/deanPart/deanRegister.html
@@ -17,16 +17,16 @@
         <div style="display: flex; flex-direction: row; justify-content: space-between;">
             <div class="form-left">
                 <label class="text-position">Full Name as per IC</label>
-                <input type="text" name="username" value="{{ username_text }}"><br>
+                <input type="text" name="username" value="{{ deanName_text }}"><br>
                 
                 <label class="text-position">Staff ID</label>
-                <input type="text" name="userid" value="{{ userid_text }}"><br>
+                <input type="text" name="userid" value="{{ deanId_text }}"><br>
 
                 <label class="text-position">Email Address</label>
-                <input type="text" name="email" value="{{ email_text }}"><br>
+                <input type="text" name="email" value="{{ deanEmail_text }}"><br>
 
                 <label class="text-position">Head of Department</label>
-                <select name="department" value="{{ department_text }}">
+                <select name="department" value="{{ deanDepartment_text }}">
                     <option value="" disabled selected>Select Department</option>
                     <option value="CADP - CENTRE OF AUSTRALIAN DEGREE PROGRAM">(CADP) CENTRE OF AUSTRALIAN DEGREE PROGRAM</option>
                     <option value="CAE - CENTRE OF AMERICAN STUDENT">(CAE) CENTRE OF AMERICAN STUDENT</option>
@@ -41,11 +41,11 @@
     
             <div class="form-right">
                 <label class="text-position">Contact Number</label>
-                <input type="tel" name="contact" value="{{ contact_text }}"><br>  
+                <input type="tel" name="contact" value="{{ deanContact_text }}"><br>  
 
                 <div class="password-container">
                     <label class="text-position">Password</label>
-                    <input type="password" name="password1" value="{{ password1_text }}">
+                    <input type="password" name="password1" value="{{ deanPassword1_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
@@ -53,7 +53,7 @@
     
                 <div class="password-container">
                     <label class="text-position"> Confirm Password</label>
-                    <input type="password" name="password2" value="{{ password2_text }}">
+                    <input type="password" name="password2" value="{{ deanPassword2_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
