--- a/app/templates/deanPart/deanLogin.html
+++ b/app/templates/deanPart/deanLogin.html
@@ -29,14 +29,14 @@
             <!-- Frame for Email Address container -->
             <div class="input-container">
                 <label>Email Address</label>
-                <input type="email" name="textbox" value="{{ login_text }}">
+                <input type="email" name="textbox" value="{{ dean_login_text }}">
             </div>
             <br>
         
             <!-- Frame for Enter Password container -->
             <div class="password-container">
                 <label>Password</label>
-                <input type="password" name="password" value="{{ password_text }}">
+                <input type="password" name="password" value="{{ dean_password_text }}">
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
