--- a/app/templates/adminPart/adminRegister.html
+++ b/app/templates/adminPart/adminRegister.html
@@ -17,22 +17,22 @@
         <div style="display: flex; flex-direction: row; justify-content: space-between;">
             <div class="form-left">
                 <label class="text-position">Full Name as per IC</label>
-                <input type="text" name="username" value="{{ username_text }}"><br>
+                <input type="text" name="username" value="{{ adminnNme_text }}"><br>
                 
                 <label class="text-position">Staff ID</label>
-                <input type="text" name="userid" value="{{ userid_text }}"><br>
+                <input type="text" name="userid" value="{{ adminId_text }}"><br>
 
                 <label class="text-position">Email Address</label>
-                <input type="text" name="email" value="{{ email_text }}"><br>
+                <input type="text" name="email" value="{{ adminEmail_text }}"><br>
             </div>
     
             <div class="form-right">
                 <label class="text-position">Contact Number</label>
-                <input type="tel" name="contact" value="{{ contact_text }}"><br>  
+                <input type="tel" name="contact" value="{{ adminContact_text }}"><br>  
 
                 <div class="password-container">
                     <label class="text-position">Password</label>
-                    <input type="password" name="password1" value="{{ password1_text }}">
+                    <input type="password" name="password1" value="{{ adminPassword1_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
@@ -40,7 +40,7 @@
     
                 <div class="password-container">
                     <label class="text-position"> Confirm Password</label>
-                    <input type="password" name="password2" value="{{ password2_text }}">
+                    <input type="password" name="password2" value="{{ adminPassword2_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
                     </button>
