--- a/app/templates/adminPart/adminRegister.html
+++ b/app/templates/adminPart/adminRegister.html
@@ -17,7 +17,7 @@
         <div style="display: flex; flex-direction: row; justify-content: space-between;">
             <div class="form-left">
                 <label class="text-position">Full Name as per IC</label>
-                <input type="text" name="username" value="{{ adminnNme_text }}"><br>
+                <input type="text" name="username" value="{{ adminName_text }}"><br>
                 
                 <label class="text-position">Staff ID</label>
                 <input type="text" name="userid" value="{{ adminId_text }}"><br>
