--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -9,7 +9,7 @@
             <form id="uploadLecturerForm" action="{{ url_for('admin_uploadLecturerTimetable') }}" method="POST" enctype="multipart/form-data">
                 <div style="text-align: center; margin-bottom: 2%;">
                     <label>
-                        Upload file 1st row must be empty and format with ID, Name, Department, Email, Contact
+                        Upload file 1st row must be empty and format with Id, Name, Department, Email, Contact
                     </label>
                 </div>
                 <div class="input-frame">
@@ -34,7 +34,7 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Lecturer ID</th>
+                    <th>Lecturer Id</th>
                     <th>Lecturer Name</th>
                     <th>Lecturer Department</th>
                     <th>Lecturer Email</th>
