--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -49,7 +49,7 @@
                 {% for row in lecturer_data %}
                 <tr>
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
-                    <td>{{ row.lecturerID  }}</td>
+                    <td>{{ row.lecturerId  }}</td>
                     <td>{{ row.lecturerName }}</td>
                     <td>{{ row.lecturerDepartment }}</td>
                     <td>{{ row.lecturerEmail }}</td>
