--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -34,11 +34,12 @@
             <thead>
                 <tr>
                     <th>No</th>
-                    <th>Lecturer Id</th>
-                    <th>Lecturer Name</th>
-                    <th>Lecturer Department</th>
-                    <th>Lecturer Email</th>
-                    <th>Lecturer Contact</th>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Department</th>
+                    <th>Role Based</th>
+                    <th>Email</th>
+                    <th>Contact</th>
                     <th>Status</th> <!-- 
                     If upload only -> no register, 
                     if lecturer register self ->register, 
