--- a/app/templates/lecturerPart/lecturerBase.html
+++ b/app/templates/lecturerPart/lecturerBase.html
@@ -10,7 +10,8 @@
             <div class="user-details">
                 {{lecturer_name}} <br>
                 {{lecturer_id}} <br>
-                {{lecturer_department}}
+                {{lecturer_department}} <br>
+                {{lecturer_level}}
             </div>
             <a href="{{ url_for('lecturer_logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
         </div>
