--- a/app/templates/deanPart/deanBase.html
+++ b/app/templates/deanPart/deanBase.html
@@ -10,7 +10,7 @@
             <div class="user-details">
                 {{dean_name}} <br>
                 {{dean_id}} <br>
-                {{dean_department}} <br>
+                <strong>Dean of: </strong> {{ dean_department }}<br>
                 {{dean_level}}
             </div>
             <a href="{{ url_for('dean_logout')}}" style="text-decoration: none;" class="logout-btn" type="button">Logout</a>
