--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -47,7 +47,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for row in lecturer_data %}
+                {% for row in user_data %}
                 <tr>
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <td>{{ row.userId  }}</td>
