--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -72,7 +72,7 @@
 
                     <!-- User status: Activated / Deactivated -->
                     <td>
-                        {% if row.userStatus|int = 1 %}
+                        {% if row.userStatus|int == 1 %}
                             Activated
                         {% else %}
                             Deactivated
