--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -28,7 +28,7 @@
     <h2>Table Record</h2>
     <label>
         To Do: <br>
-        1. Allow edit based on the Id
+        1. Allow edit based on the Id <br>
         2. Deactivated will send an email to the upload email address for activation link <br>
         Question: <br>
         1. For the Department, what looks inside Excel, does I need to set if SOE to SOE - School of Engineering <br>
