--- a/app/templates/adminPart/adminUploadLecturerTimetable.html
+++ b/app/templates/adminPart/adminUploadLecturerTimetable.html
@@ -9,7 +9,7 @@
             <form id="uploadLecturerForm" action="{{ url_for('admin_uploadLecturerTimetable') }}" method="POST" enctype="multipart/form-data">
                 <div style="text-align: center; margin-bottom: 2%;">
                     <label>
-                        Upload file 1st row must be empty and format with Id, Name, Department, Email, Contact
+                        Upload file 1st row must be empty and format with Id, Name, Department, Role, Email, Contact
                     </label>
                 </div>
                 <div class="input-frame">
