--- a/app/templates/adminPart/adminBase.html
+++ b/app/templates/adminPart/adminBase.html
@@ -47,7 +47,7 @@
         <div class="tab-nav">
             <a href="{{ url_for('admin_upload')}}" 
                class="tab-link {% if active_tab == 'admin_uploadtab' %}active{% endif %}" 
-               data-tab="admin_uploadtab">Lecturers Timetable</a>
+               data-tab="admin_uploadtab">Upload File Dashboard</a>
 
             <a href="{{ url_for('admin_uploadLecturerTimetable')}}" 
                class="tab-link {% if active_tab == 'admin_uploadLecturerTimetabletab' %}active{% endif %}" 
