--- a/app/templates/lecturerPart/lecturerBase.html
+++ b/app/templates/lecturerPart/lecturerBase.html
@@ -24,7 +24,7 @@
     <!-- Main tab navigation -->
         <div class="tab-nav">
             <a href="{{ url_for('lecturer_homepage')}}" 
-               class="tab-link {% if active_tab == 'lecturer_homepagetab' %}active{% endif %}" 
+               class="tab-link {% if active_tab == 'lecturer_hometab' %}active{% endif %}" 
                data-tab="home">Home</a>
 
             <a href="{{ url_for('lecturer_timetables')}}" 
