--- a/app/templates/lecturerPart/lecturerBase.html
+++ b/app/templates/lecturerPart/lecturerBase.html
@@ -27,7 +27,7 @@
                class="tab-link {% if active_tab == 'lecturer_hometab' %}active{% endif %}" 
                data-tab="home">Home</a>
 
-            <a href="{{ url_for('lecturer_timetabls')}}" 
+            <a href="{{ url_for('lecturer_timetable')}}" 
                class="tab-link {% if active_tab == 'lecturer_timetabletab' %}active{% endif %}" 
                data-tab="upload">Timetable</a>
 
