--- a/app/static/css/lecturer/lecturerHome.css
+++ b/app/static/css/lecturer/lecturerHome.css
@@ -15,6 +15,13 @@ form {
     font-size: medium;
 }
 
+input, select {
+    width: 25vh;
+    padding: 10px;
+    margin: 1% 0;
+    box-sizing: border-box;
+}
+
 /* Heading frame layout */
 .header-container {
     display: flex;
