--- a/app/templates/lecturerPart/lecturerProfile.html
+++ b/app/templates/lecturerPart/lecturerProfile.html
@@ -4,58 +4,9 @@
 
 <div class="menu-section">
     <div class="main-frame">
-        <h1>Register as New Lecturer</h1>
-        <br>
-        <div style="display: flex; flex-direction: row; justify-content: space-between;">
-            <div class="form-left">
-                <label class="text-position">Full Name as per IC</label>
-                <input type="text" name="username" value="{{ lecturerName_text }}"><br>
-                
-                <label class="text-position">Staff ID</label>
-                <input type="text" name="userid" value="{{ lecturerId_text }}"><br>
-
-                <label class="text-position">Email Address</label>
-                <input type="text" name="email" value="{{ lecturerEmail_text }}"><br>
-
-                <label class="text-position">Department</label>
-                <select name="department" value="{{ lecturerDepartment_text }}">
-                    <option value="" disabled selected>Select Department</option>
-                    <option value="CADP - CENTRE OF AUSTRALIAN DEGREE PROGRAM">(CADP) CENTRE OF AUSTRALIAN DEGREE PROGRAM</option>
-                    <option value="CAE - CENTRE OF AMERICAN STUDENT">(CAE) CENTRE OF AMERICAN STUDENT</option>
-                    <option value="CEPS - CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES">(CEPS) CENTRE OF EXCELLENT FOR PRE-UNIVERSITY STUDIES</option>
-                    <option value="LCMPU - LANGUAGE CENTRE">(LCMPU) LANGUAGE CENTRE</option>
-                    <option value="SOBIZ - SCHOOL OF BUSINESS">(SOBIZ) SCHOOL OF BUSINESS</option>
-                    <option value="SOC - SCHOOL OF COMPUTING">(SOC) SCHOOL OF COMPUTING</option>
-                    <option value="SOE - SCHOOL OF ENGINEERING">(SOE) SCHOOL OF ENGINEERING</option>
-                    <option value="SOHOS - SCHOOL OF HOSPITALITY AND CULINARY ARTS">(SOHOS) SCHOOL OF HOSPITALITY AND CULINARY ARTS</option>
-                </select>
-            </div>
-
-            <div class="form-right">
-                <label class="text-position">Contact Number</label>
-                <input type="tel" name="contact" value="{{ lecturerContact_text }}"><br>  
-
-                <div class="password-container">
-                    <label class="text-position">Password</label>
-                    <input type="password" name="password1" value="{{ lecturerPassword1_text }}">
-                    <button type="button" class="toggle-password-btn">
-                        <i class="fas fa-eye"></i>
-                    </button>
-                </div><br>
-
-                <div class="password-container">
-                    <label class="text-position"> Confirm Password</label>
-                    <input type="password" name="password2" value="{{ lecturerPassword2_text }}">
-                    <button type="button" class="toggle-password-btn">
-                        <i class="fas fa-eye"></i>
-                    </button>
-                </div>
-
-                <!-- Javascript control the password toggle -->
-                <script src="{{ url_for('static', filename='js/function.js') }}"></script>
-            </div>
-        </div>
+        {% include "lecturerPart/_lecturerRegisterForm.html" %}
     </div>
 </div>
 
+<script src="{{ url_for('static', filename='js/function.js') }}"></script>
 {% endblock %}
